--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,8 @@
   <main>
     <div id="contact">
       <h2>Contact us today to schedule your first lesson.</h2>
-        <p class="tel-link"><a href="tel:(814) 555-92288">(814) 555-9228</a></p>
+        <p class="tel-link mobile"><a href="tel:(814) 555-92288">(814) 555-9228</a></p>
+        <p class="tab-desk">(814) 555-9228</p> 
         <p>Email:<a class="email-link" href="mailto:lessons@strikeachord.net">lessons@strikeachord.net</a></p> 
         <p>We are located at: 1122 Music Lane, Chicago, IL 60007</p>
         
