--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <li><a href="lessons.html">Lessons</a></li>
     <li><a href="instructors.html">Instructors</a></li>
     <li><a href="rentals.html">Rentals</a></li>
-    <li>
+    <li><a href="contact.html">Contact</a></li>
     </ul>
     </nav>
 
